chore: Rename norwegian subzones

--- a/web/src/locales/cs.json
+++ b/web/src/locales/cs.json
@@ -1271,11 +1271,11 @@
     },
     "NO-NO1": {
       "countryName": "Norsko",
-      "zoneName": "Jihovýchodní Norsko"
+      "zoneName": "Východní Norsko"
     },
     "NO-NO2": {
       "countryName": "Norsko",
-      "zoneName": "Jihozápadní Norsko"
+      "zoneName": "Jižní Norsko"
     },
     "NO-NO3": {
       "countryName": "Norsko",
