--- a/web/src/locales/da.json
+++ b/web/src/locales/da.json
@@ -1244,11 +1244,11 @@
     },
     "NO-NO1": {
       "countryName": "Norge",
-      "zoneName": "Sydøstnorge"
+      "zoneName": "Østnorge"
     },
     "NO-NO2": {
       "countryName": "Norge",
-      "zoneName": "Sydvestnorge"
+      "zoneName": "Sørnorge"
     },
     "NO-NO3": {
       "countryName": "Norge",
