--- a/web/src/locales/de.json
+++ b/web/src/locales/de.json
@@ -898,11 +898,11 @@
     },
     "NO-NO1": {
       "countryName": "Norwegen",
-      "zoneName": "Südost-Norwegen"
+      "zoneName": "Ost-Norwegen"
     },
     "NO-NO2": {
       "countryName": "Norwegen",
-      "zoneName": "Südwest-Norwegen"
+      "zoneName": "Süd-Norwegen"
     },
     "NO-NO3": {
       "countryName": "Norwegen",
