--- a/web/src/locales/el.json
+++ b/web/src/locales/el.json
@@ -855,11 +855,11 @@
     },
     "NO-NO1": {
       "countryName": "Νορβηγία",
-      "zoneName": "Νοτιοανατολική Νορβηγία"
+      "zoneName": "Ανατολική Νορβηγία"
     },
     "NO-NO2": {
       "countryName": "Νορβηγία",
-      "zoneName": "Νοτιοδυτική Νορβηγία"
+      "zoneName": "Νότια Νορβηγία"
     },
     "NO-NO3": {
       "countryName": "Νορβηγία",
