--- a/web/src/locales/es.json
+++ b/web/src/locales/es.json
@@ -1046,11 +1046,11 @@
     },
     "NO-NO1": {
       "countryName": "Noruega",
-      "zoneName": "Sureste"
+      "zoneName": "Este"
     },
     "NO-NO2": {
       "countryName": "Noruega",
-      "zoneName": "Suroeste"
+      "zoneName": "Sur"
     },
     "NO-NO3": {
       "countryName": "Noruega",
