--- a/web/src/locales/et.json
+++ b/web/src/locales/et.json
@@ -926,11 +926,11 @@
     },
     "NO-NO1": {
       "countryName": "Norra",
-      "zoneName": "Kagu-Norra"
+      "zoneName": "Ida-Norra"
     },
     "NO-NO2": {
       "countryName": "Norra",
-      "zoneName": "Edela-Norra"
+      "zoneName": "Lõuna-Norra"
     },
     "NO-NO3": {
       "countryName": "Norra",
