--- a/web/src/locales/fi.json
+++ b/web/src/locales/fi.json
@@ -899,11 +899,11 @@
     },
     "NO-NO1": {
       "countryName": "Norja",
-      "zoneName": "Kaakkois-Norja"
+      "zoneName": "Itä-Norja"
     },
     "NO-NO2": {
       "countryName": "Norja",
-      "zoneName": "Lounas-Norja"
+      "zoneName": "Etelä-Norja"
     },
     "NO-NO3": {
       "countryName": "Norja",
