--- a/web/src/locales/fr.json
+++ b/web/src/locales/fr.json
@@ -1330,11 +1330,11 @@
     },
     "NO-NO1": {
       "countryName": "Norvège",
-      "zoneName": "Sud-Est"
+      "zoneName": "Est"
     },
     "NO-NO2": {
       "countryName": "Norvège",
-      "zoneName": "Sud-Ouest"
+      "zoneName": "Sud"
     },
     "NO-NO3": {
       "countryName": "Norvège",
