--- a/web/src/locales/hr.json
+++ b/web/src/locales/hr.json
@@ -901,11 +901,11 @@
     },
     "NO-NO1": {
       "countryName": "Norveška",
-      "zoneName": "Jugoistočna Norveška"
+      "zoneName": "Istočna Norveška"
     },
     "NO-NO2": {
       "countryName": "Norveška",
-      "zoneName": "Jugozapadna Norveška"
+      "zoneName": "Južna Norveška"
     },
     "NO-NO3": {
       "countryName": "Norveška",
