--- a/web/src/locales/id.json
+++ b/web/src/locales/id.json
@@ -899,7 +899,7 @@
     },
     "NO-NO1": {
       "countryName": "Norwegia",
-      "zoneName": "Norwegia Selatan"
+      "zoneName": "Norwegia Timur"
     },
     "NO-NO2": {
       "countryName": "Norwegia",
