--- a/web/src/locales/it.json
+++ b/web/src/locales/it.json
@@ -977,11 +977,11 @@
     },
     "NO-NO1": {
       "countryName": "Norvegia",
-      "zoneName": "Norvegia Sudest"
+      "zoneName": "Norvegia orientale"
     },
     "NO-NO2": {
       "countryName": "Norvegia",
-      "zoneName": "Norvegia Sudovest"
+      "zoneName": "Norvegia meridionale"
     },
     "NO-NO3": {
       "countryName": "Norvegia",
