--- a/web/src/locales/ja.json
+++ b/web/src/locales/ja.json
@@ -899,11 +899,11 @@
     },
     "NO-NO1": {
       "countryName": "ノルウェー",
-      "zoneName": "ノルウェー南東部"
+      "zoneName": "ノルウェー東部"
     },
     "NO-NO2": {
       "countryName": "ノルウェー",
-      "zoneName": "ノルウェー南西部"
+      "zoneName": "ノルウェー南部"
     },
     "NO-NO3": {
       "countryName": "ノルウェー",
