--- a/web/src/locales/no-NB.json
+++ b/web/src/locales/no-NB.json
@@ -1047,11 +1047,11 @@
     },
     "NO-NO1": {
       "countryName": "Norge",
-      "zoneName": "Sørøst-Norge"
+      "zoneName": "Øst-Norge"
     },
     "NO-NO2": {
       "countryName": "Norge",
-      "zoneName": "Sørvest-Norge"
+      "zoneName": "Sør-Norge"
     },
     "NO-NO3": {
       "countryName": "Norge",
