--- a/web/src/locales/pl.json
+++ b/web/src/locales/pl.json
@@ -1007,11 +1007,11 @@
     },
     "NO-NO1": {
       "countryName": "Norwegia",
-      "zoneName": "Norwegia południowo-wschodnia"
+      "zoneName": "Norwegia wschodnia"
     },
     "NO-NO2": {
       "countryName": "Norwegia",
-      "zoneName": "Norwegia południowo-zachodnia"
+      "zoneName": "Norwegia południowa"
     },
     "NO-NO3": {
       "countryName": "Norwegia",
