--- a/web/src/locales/pt-PT.json
+++ b/web/src/locales/pt-PT.json
@@ -1178,15 +1178,15 @@
     },
     "NO-NO1": {
       "countryName": "Noruega",
-      "zoneName": "Sudeste da Noruega"
+      "zoneName": "Leste da Noruega"
     },
     "NO-NO2": {
       "countryName": "Noruega",
-      "zoneName": "Sudeste da Noruega"
+      "zoneName": "Sul da Noruega"
     },
     "NO-NO3": {
       "countryName": "Noruega",
-      "zoneName": "Noruega média"
+      "zoneName": "Noruega Central"
     },
     "NO-NO4": {
       "countryName": "Noruega",
