--- a/web/src/locales/ru.json
+++ b/web/src/locales/ru.json
@@ -1066,11 +1066,11 @@
     },
     "NO-NO1": {
       "countryName": "Норвегия",
-      "zoneName": "Юго-Восточная Норвегия"
+      "zoneName": "Восточная Норвегия"
     },
     "NO-NO2": {
       "countryName": "Норвегия",
-      "zoneName": "Юго-Западная Норвегия"
+      "zoneName": "Южная Норвегия"
     },
     "NO-NO3": {
       "countryName": "Норвегия",
