--- a/web/src/locales/sk.json
+++ b/web/src/locales/sk.json
@@ -891,11 +891,11 @@
     },
     "NO-NO1": {
       "countryName": "Nórsko",
-      "zoneName": "Juhovychodné Nórsko"
+      "zoneName": "Východné Nórsko"
     },
     "NO-NO2": {
       "countryName": "Nórsko",
-      "zoneName": "Juhozápadné Nórsko"
+      "zoneName": "Južné Nórsko"
     },
     "NO-NO3": {
       "countryName": "Nórsko",
