--- a/web/src/locales/sl.json
+++ b/web/src/locales/sl.json
@@ -972,11 +972,11 @@
     },
     "NO-NO1": {
       "countryName": "Norveška",
-      "zoneName": "Jugo-vzhodna Norveška"
+      "zoneName": "Vzhodna Norveška"
     },
     "NO-NO2": {
       "countryName": "Norveška",
-      "zoneName": "Jugo-zahodna Norveška"
+      "zoneName": "Južna Norveška"
     },
     "NO-NO3": {
       "countryName": "Norveška",
