--- a/web/src/locales/sv.json
+++ b/web/src/locales/sv.json
@@ -1308,11 +1308,11 @@
     },
     "NO-NO1": {
       "countryName": "Norge",
-      "zoneName": "Sydöstra Norge"
+      "zoneName": "Östra Norge"
     },
     "NO-NO2": {
       "countryName": "Norge",
-      "zoneName": "Sydvästra Norge"
+      "zoneName": "Södra Norge"
     },
     "NO-NO3": {
       "countryName": "Norge",
