--- a/web/src/locales/vi.json
+++ b/web/src/locales/vi.json
@@ -797,11 +797,11 @@
     },
     "NO-NO1": {
       "countryName": "Na Uy",
-      "zoneName": "Đông Nam Na Uy"
+      "zoneName": "Đông Na Uy"
     },
     "NO-NO2": {
       "countryName": "Na Uy",
-      "zoneName": "Tây Bắc Na Uy"
+      "zoneName": "Nam Na Uy"
     },
     "NO-NO3": {
       "countryName": "Na Uy",
