--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -877,11 +877,11 @@
     },
     "NO-NO1": {
       "countryName": "挪威",
-      "zoneName": "挪威东南部"
+      "zoneName": "挪威东部"
     },
     "NO-NO2": {
       "countryName": "挪威",
-      "zoneName": "挪威西南部"
+      "zoneName": "挪威南部"
     },
     "NO-NO3": {
       "countryName": "挪威",
