Add some missing translations for German (de)

--- a/web/src/locales/de.json
+++ b/web/src/locales/de.json
@@ -175,6 +175,15 @@
   "coal": "Kohle",
   "oil": "Öl",
   "unknown": "unbekannt",
+  "electricityStoredUsing": "wird gespeichert in",
+  "emissionsStoredUsing": "werden gespeichert durch",
+  "electricityExportedTo": "wird exportiert nach",
+  "emissionsExportedTo": "werden exportiert nach",
+  "electricityImportedFrom": "wird importiert aus",
+  "emissionsImportedFrom": "werden importiert aus",
+  "electricityAvailableIn": "der verfügbaren Elektrizität in",
+  "emissionsAvailableIn": "der Emissionen aus verfügbarer Elektrizität in",
+  "comesFrom": "kommt aus",
   "ofCO2eq": "CO₂äq",
   "theMap": {
     "groupName": "Die Karte",
